fixed add/edit page alignment

--- a/src/styles/producer/editshow.css
+++ b/src/styles/producer/editshow.css
@@ -6,6 +6,8 @@
     display:flex;
     flex-direction: column;
     flex:1;
+    align-items: center;
+    justify-content: center;
 }
 
 .inputRow {
